--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1><meta name="google-site-verification" content="l2tx9HRPtqaoc21hpDiui4ZmD4G0P4Z55mWKwadi5yI" />
+  Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
