--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html><meta name="google-site-verification" content="rwjYwBBeVNdq2SzLP1XGJF0yY_JOwUkyt8_LntQhVFk" />
 <body>
-<h1><meta name="google-site-verification" content="l2tx9HRPtqaoc21hpDiui4ZmD4G0P4Z55mWKwadi5yI" />
+<h1>
   Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
