--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html><meta name="google-site-verification" content="rwjYwBBeVNdq2SzLP1XGJF0yY_JOwUkyt8_LntQhVFk" />
+<html>
+<head> <meta name="google-site-verification" content="rwjYwBBeVNdq2SzLP1XGJF0yY_JOwUkyt8_LntQhVFk" />
+<head>  
 <body>
 <h1>
   Hello World</h1>
