--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="0JTmthD0TcU3KdUcp8w6t3kE89QBaFQldR5Oq7dfE4k" />
+<head> 
 <head>  
 <body>
 <h1>
