--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
+  <meta name="google-site-verification" content="b_kvQeA44SAPQEHiIPHXmJ6eS9a8-xkETkSGYezyVIU" />
 <head>  
 <body>
 <h1>
