--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> 
-  <meta name="google-site-verification" content="b_kvQeA44SAPQEHiIPHXmJ6eS9a8-xkETkSGYezyVIU" />
-<head>  
+<head> <meta name="google-site-verification" content="_0oNrOuHb2-Z17DKbThMOATOFrWODBfPEnSVrbluYTY" />
+</head>
 <body>
 <h1>
   Hello World</h1>
