--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="l1SXVQg2wikE9eLh71Fv5gtW8JEphcbJNLe2LafTxA4" />
+<head> 
 </head>
 <body>
 <h1>
