--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="vogbE0sshWGIW_e1nPfrxEJhiEKenoIfbQcGrLKz-NI" />
 </head>
 <body>
 <h1>
