--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="OA2dgg1X-wDBO63MRGM37vWqRnD9huNrh6rEZToFHKA" />
 </head>
 <body>
 <h1>
