--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="eVNYpDPceIKyJqNEl_Zk67OFA6TWl_ccxOWYzQfKAWM" />
+<head> 
+  <meta name="google-site-verification" content="RNeurwAAWHiU0c7eJjp0AUhYOSbZGEGEVnpLQhVM2Us" />
 </head>
 <body>
 <h1>
