--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> 
-  <meta name="google-site-verification" content="RNeurwAAWHiU0c7eJjp0AUhYOSbZGEGEVnpLQhVM2Us" />
-</head>
+<head> <meta name="google-site-verification" content="1kgadjtrioEbdp91m0bPv7mXmX-QpSglBgzYt1SvMaI" />
+</head> 
 <body>
 <h1>
   Hello World</h1>
