--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="meRyJv1HSz_xHU6UHIRNyHZ9AA-FWJI3NdH75kl81zI" />
+<head> 
 </head> 
 <body>
 <h1>
