--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="n0crHO1NwXGZy-CNOhZK_wiVIVBEqBlT-s9WkW5hFmM" />
 </head> 
 <body>
 <h1>
