--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> https://rawcdn.githack.com/matteodso96/matteodso96.github.io/b44dab66f7aea811dc599139826ab22857447a9e/index.html
+<head> <meta name="google-site-verification" content="eqeiwBtrk9ziSM83LxVRjfuKNquDCsFQH6yw_9zRLT8" />
 </head> 
 <body>
 <h1>
