--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="zbcQA4XbChpuY4WzJ55Zbl-1sqUb53imH5OUnnjU2Pk" />
+<head> 
 </head> 
 <body>
 <h1>
