--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-</head> 
+</head> <meta name="google-site-verification" content="HgN-3Uqwnn5rbqzpDLuvP1eIiSja9eLpIyC_kI1n2jQ" />
 <body>
 <h1>
   Hello World</h1>
