--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> 
-</head> <meta name="google-site-verification" content="zhFLKwyTDTVn1kF4gAZqXAhy6g87DkKp5MCQhASWoBY" />
+<head> <meta name="google-site-verification" content="zhFLKwyTDTVn1kF4gAZqXAhy6g87DkKp5MCQhASWoBY" />
+</head> 
 <body>
 <h1>
   Hello World</h1>
