--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="NyPT-pLhc0jh1tUaAhYweuqUx6uETKnNbekhsm9U0pA" />
 </head> 
 <body>
 <h1>
