--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="aZQBHXZvrcpcRXyBWO3jVZLJNkoVOgAyZoMzI0LY75k" />
+<head> 
 </head> 
 <body>
 <h1>
