--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="69w4KJs9cKcw0Se4tG4L8svafo1cRsalGlWd9QKFBBY" />
+<head> 
 </head> 
 <body>
 <h1>
