--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta name="google-site-verification" content="NFPW7Yc8eAheElXNXZ3yHmt788C5EkZTTb8PcPgs5IQ" />
 </head> 
 <body>
 <h1>
