--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="FuYp2NlvD3aKA3IUw1_D7qwwuxo-CT-Qf37d1xokT68" />
 </head> 
 <body>
 <h1>
