--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="2tHykPawQQt2_03uyu7HqHSW7BENEEbh8htXrCgMovI" />
 </head> 
 <body>
 <h1>
