--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta name="google-site-verification" content="GURSR8j86eVZX2qjFHS6VRNok12VW87WtziEFB5VjA8" />
 </head> 
 <body>
 <h1>
