--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="GURSR8j86eVZX2qjFHS6VRNok12VW87WtziEFB5VjA8" />
+<head> <meta name="google-site-verification" content="kgsG9MlPykVhYORmaQRaKhrQsv-P7eRcvo5MRWsc44E" />
+</head>
 <body>
 <h1>
   Hello World</h1>
