--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="kgsG9MlPykVhYORmaQRaKhrQsv-P7eRcvo5MRWsc44E" />
 </head>
 <body>
 <h1>
