--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="mFVLHJ-yEU7wRs3nw5yj7MiOXNeWQ3bDLx7WdYZdiwo" />
 </head>
 <body>
 <h1>
