--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="3HZbISW23Vkc8FFwJP12GNUkZpi4eHapK79juCT8Kx0" />
 <body>
 <h1>
   Hello World</h1>
