--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="3HZbISW23Vkc8FFwJP12GNUkZpi4eHapK79juCT8Kx0" />
+<head> 
 </head>
 <body>
 <h1>
