--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="CBqNY2GXwN78kNrpidscoWr3Ud82E78E1FWGgeNIprI" />
 </head>
 <body>
 <h1>
