--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="2aBVIjsi5b3F62uAnQ_ge-mOAwspm8VfJwdcCHCr9VE" />
+<head> 
 </head>
 <body>
 <h1>
