--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="axfokqnlBo0hOyblu2HYs-Qkr05m5gMBhDSBAG06OgA" />
 </head>
 <body>
 <h1>
