--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
+</head> <meta name="google-site-verification" content="tFwdpWVkvS2DuDFiLim7zE-QpOt7z573JQXOAQQ1kjo" />
 <body>
 <h1>
   Hello World</h1>
