--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head> 
-</head> <meta name="google-site-verification" content="tFwdpWVkvS2DuDFiLim7zE-QpOt7z573JQXOAQQ1kjo" />
+<head> <meta name="google-site-verification" content="tFwdpWVkvS2DuDFiLim7zE-QpOt7z573JQXOAQQ1kjo" />
+</head> 
+<body>
 <body>
 <h1>
   Hello World</h1>
