--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="tFwdpWVkvS2DuDFiLim7zE-QpOt7z573JQXOAQQ1kjo" />
+<head> 
 </head> 
 <body>
 <body>
