--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="hy84wREj2J3UzPNWzwRZ2MWa99EfrH-V8aZ223yuTLk" />
 </head> 
 <body>
 <body>
