--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="bpRM58MO7TBLnWGuX1myx47iGuRE1viAAjqGW3qwWxc" />
 </head> 
 <body>
 <body>
