--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="zZvlOi528DuxxqAPIXmhOpOo86h6IQpd3WvXZVcEkTM" />
 </head> 
 <body>
 <body>
