--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="zZvlOi528DuxxqAPIXmhOpOo86h6IQpd3WvXZVcEkTM" />
-</head> 
+<head> 
 <body>
 <body>
 <h1>
