--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="eD6-cGiHwZtEVuc4y2otHcWmdeEO-LplJf8RLv0DuLs" />
 </head> 
 <body>
 <body>
