--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="hQ_mNgxbge9GBpo5pL5sgHp6q_3dHkssPHIcJZq26bk" />
 </head> 
 <body>
 <body>
