--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="m7w77lPuMsHvHwSdTtPszSIFeh7avPb4vpEfYdcz10E" />
+<head> 
 </head>
 <body>
 <body>
