--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="pvIsUot4YOnfCCavSlD9SirGQLXay-sCUDAIXGXYyXw" />
 </head>
 <body>
 <body>
