--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="MyT2hrJT-wXfGzbLzxsMarqAAWp0WOguuH-6B1xYEyA" />
-</head>
+<head> 
 <body>
 <body>
 <h1>
