--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head> 
+<meta name="google-site-verification" content="M-L0FthTUu4Tlmk4BEYUEShuX-oz_KBr7zySWqmoM2k" />
+</head>
 <body>
 <body>
 <h1>
