--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<meta name="google-site-verification" content="M-L0FthTUu4Tlmk4BEYUEShuX-oz_KBr7zySWqmoM2k" /></head>
+</head>
 <body>
 <body>
 <h1>
