--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="ZgJLJCZm8xM2TIqCoy3qCjnktpYTE9SHWFmE2lIEFKA" />
+<head> 
 </head>
 <body>
 <body>
