--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="Nj8w7ShjqGS4fDrY7YdGsSlGWuA9h_QptgXahejr-FQ" />
 </head>
 <body>
 <body>
