--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="PgzVJyRrF4-j4wodgRKAiNsqLojtKh3gJEH9Sw16nps" />
 </head>
 <body>
 <body>
