--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="PgzVJyRrF4-j4wodgRKAiNsqLojtKh3gJEH9Sw16nps" />
-</head>
+<head> 
 <body>
 <body>
 <h1>
