--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="1XRTRI1A95TzW7n_0YAG6EQcaWy1C-E3nmTNgm8WcdM" />
+<head>
 </head>
 <body>
 <body>
