--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="bXnKSbzUzaP2tE8530A6LQcwXB0o_lP7b8dFeyViQhc" />
+<head> 
 </head>
 <body>
 <body>
