--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="I0XJyHSO3tGvV6PJjHqkUKyd5xqguI_k-F5GgBHU_Nw" />
 </head>
 <body>
 <body>
