--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="KXnWq1d4R7eyBu4QqMfJwnMfC-cC64DioqTLdSa4EHQ" />
+<head> 
 </head>
 <body>
 <body>
