--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="ilmSAq1tY4vRoUoztw5TCJdZXMpYt1IHv3hHxPLy_ts" />
 </head>
 <body>
 <body>
