--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="8CKDav-XTPZVs8ktwrUdnOLMpQvA9v_x3r_TQ1I4Z08" />
+<head> 
 </head>
 <body>
 <body>
