--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="C4uQ3ESYDv6Bj2mx3F2trtuOTfvpgawSCO3mz_-kjGQ" />
 </head>
 <body>
 <body>
