--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="6ftzLqxnh3zD4vVk0Ra3GWqmiKY7g6NlfcoNYrnCtJA" />
+<head> 
 </head>
 <body>
 <body>
