--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="x52aGB6gZtrBCb9_6dx7Fgxu2VeXNi-mVTIDJRpLDdo" />
 </head>
 <body>
 <body>
