--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="ugOK_9UF4eKuxJXOVpLAVUhJGdoq_pJF306V1KGLwnw" />
+<head> 
 </head>
 <body>
 <body>
