--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="kd-BKhg_vtEt_ePAUKAmC8jEy8gi4KhL2KZJ0JtcU68" />
 </head>
 <body>
 <body>
