--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="HgN-3Uqwnn5rbqzpDLuvP1eIiSja9eLpIyC_kI1n2jQ" />
 </head>
 <body>
 <body>
