--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="zhFLKwyTDTVn1kF4gAZqXAhy6g87DkKp5MCQhASWoBY" />
 </head>
 <body>
 <body>
