--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="LVhCRFfwY-BHyGcCu_R-v8m9HpNfQ-vQoDzp3cLsDXQ" />
 </head>
 <body>
 <body>
