--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="k_FSiyAM9mW20Y6ar_CFoVWTGxdmQe5QMPIJegNGZ6g" />
+<head> 
 </head>
 <body>
 <body>
