--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="IsSbvl18mvHoMP_Km4wafdUaJ5gixG2S2xhj3pJyQO4" />
+<head> 
 </head>
 <body>
 <body>
