--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 </head>
-<body>
+<body> <meta name="google-site-verification" content="IBlJ_vstfPnsmJUBlTJ4OS-LSEt0PonSXVSR3J5NU6M" />
 <body>
 <h1>
   Hello World</h1>
