--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head> <meta name="google-site-verification" content="IBlJ_vstfPnsmJUBlTJ4OS-LSEt0PonSXVSR3J5NU6M" />
 </head>
 <body> 
 <body>
