--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="RSgj7uxXLdBzGEDvzM2NYB1Rk92M5-wEIOcebN_eMwc" />
+<head> 
 </head>
 <body> 
 <body>
