--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta name="google-site-verification" content="6_EPlGyUdaAan8QliXWcJWwLFyN8gfW0H5QV_bz2g74" />
 </head>
 <body> 
 <body>
