--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <meta name="google-site-verification" content="26vxVKCPRN6ynH_zlJrMOilMPgELABKgv7NW--xWVKw" />
+<head> 
 </head>
 <body> 
 <body>
